center parole and prob charts, fix states notes, fix spacing for tab panels

--- a/app/www/theme.css
+++ b/app/www/theme.css
@@ -313,12 +313,15 @@ Tabset Panels
   margin: 0;
   width: 100%
   display: inline;
+  padding: 1px 0; /* raise tabs slightly above line */
 }
 
 .nav-tabs > li {
   float:none;
-  display:inline-block; /* maintains tab structure for parole, prob and revocations */
+  display:inline-block; /* maintains horizontal tab structure for parole, prob and revocations */
   zoom:1;
+  width: 150px;
+  padding: 0px 14px; /* changes spacing between tabpanels */
 }
 
 .nav-tabs {
@@ -338,7 +341,7 @@ Tabset Panels
 
 .nav-tabs>li>a {
   margin-right: 2px;
-  line-height: 1.42857143;
+  line-height: 1.42857143; /* height of tab panel buttons */
   border-radius: 0px 0px 0 0;
   background-color: #F4F6F8;
   color: #004270;
